# changelog-version-bump

./: .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  README.md  change.ml  change.mli  cli.ml  dune  dune-project  line.ml  line.mli  ochangelog.opam  parse_change_log.ml  suggestion.ml  version_number.ml  version_number.mli
example/: CHANGE.md  CHANGE_generated.md  dune
src/: change.ml  change.mli  cli.ml  dune  line.ml  line.mli  suggestion.ml  suggestion.mli  version_number.ml  version_number.mli
test/: test_change_log.md
